# Fast-Api-App

./: .gitignore  README.md  pyproject.toml  render.yaml
app/: main.py
fast_api_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py
